# meta-quantum-control

./: .gitignore  @  CODE_LOCATIONS.txt  COMPATIBILITY_SUMMARY.md  FIDELITY_TRACKING_FIXES.md  FIXES_SUMMARY.md  FIX_GRADIENT_ERROR.md  GRADIENT_BUG_FIX.md  INDEX.md  INSTRUCTIONS_TO_FIX.md  MIGRATION_COMPLETE.md  MIGRATION_GUIDE.md  MIXED_MODELS_GUIDE.md  Makefile  QUICK_DEBUG_SNIPPET.py  QUICK_REFERENCE.txt  README.md  README_FIX.md  TWO_QUBIT_FIX_SUMMARY.md  debug_gradients.py  diagnose_gradients.py  pyproject.toml  setup.py  test_actual_gradients.py  test_compatibility.py  test_dimension_fix.py  test_fidelity_fix.py  test_fidelity_tracking.py  test_fix_minimal.py  test_gradient_flow.py  test_gradients.py  test_higher_simple.py  test_maml_gradient.py  test_mixed_models.py  test_pipeline.py  test_training_fixes.py
checkpoints_gamma/: maml_gamma_pauli_x_best.pt  training_history.json
checkpoints_gamma_v2/: maml_gamma_pauli_x.pt  maml_gamma_pauli_x_best_policy.pt  training_history.json
checkpoints_gamma_v3/: maml_gamma_pauli_x_policy.pt
checkpoints_gamma_v4/: training_history.json
checkpoints_mixed_models/: maml_best_pauli_x_best.pt  maml_best_pauli_x_best_policy.pt
configs/: experiment_config.yaml  experiment_config_gamma.yaml  experiment_config_gamma_quick.yaml  experiment_config_gamma_training_fig.yaml  experiment_config_mixed_models.yaml  experiment_config_v2.yaml  two_qubit_experiment.yaml
docs/: CLASSICAL_EXAMPLE_GUIDE.md  DEBUG_PROTOCOL.md  DIFFERENTIABLE_SIMULATION.md  EXPERIMENTS_GUIDE.md  GPU_OPTIMIZATION_GUIDE.md  GRAPE_BASELINE.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_COMPLETE.md  MIGRATION_GUIDE.md  PLOTTING_GUIDE.md  QUICKSTART.md  ROBUST_EXPERIMENTS_GUIDE.md
examples/: README_TWO_QUBIT.md  grape_example.py  plot_training_example.py  two_qubit_cnot_optimization.py
experiments/: GRAPE_USAGE.md  ISSUES_FIXED.md  benchmark_gpu_performance.py  check_gpu_acceleration.py  debug_training.py  eval_gap.py  quick_performance_test.py  test_figure_pipeline.py  (+5 more)
(+280 files in other folders)
