[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "metaqctrl"
version = "1.0.0"
description = "Meta-RL for Quantum Control with Optimality Gap Theory"
authors = [
    {name = "Nima Leclerc", email = "nleclerc@mitre.org"}
]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

# Core dependencies
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "torch>=2.0.0",
    "jax>=0.4.0",
    "jaxlib>=0.4.0",
    # Quantum simulation
    "qutip>=4.7.0",
    # Meta-learning
    "higher>=0.2.1",
    # Optimization
    "optax>=0.1.4",
    # Experiment management
    "wandb>=0.15.0",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    # Utilities
    "tqdm>=4.65.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "typer>=0.19.2",
    # Theory/numerics
    "cvxpy>=1.3.0",
    "scikit-learn>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "ipykernel>=6.0.0",
    "jupyter>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=7.3.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "ipykernel>=6.0.0",
    "jupyter>=1.0.0",
]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.hatch.build.targets.wheel]
packages = ["metaqctrl"]
